--- a/custom_components/smart_thermostat/services.yaml
+++ b/custom_components/smart_thermostat/services.yaml
@@ -81,6 +81,26 @@ set_pid_gain:
           max: 1000000
           step: 0.001
           mode: box
+set_pwm:
+  name: Set PWM interval
+  description: Sets the pulse width modulation interval.
+  target:
+    entity:
+      integration: smart_thermostat
+      domain: climate
+  fields:
+    pwm:
+      name: PWM
+      description: PWM interval (seconds)
+      required: false
+      advanced: false
+      example: 
+      selector:
+        number:
+          min: 0
+          max: 1000000
+          step: 0.1
+          mode: box
 set_outdoor_sensor_offset:
   name: Set outdoor sensor offset
   description: Sets the outdoor sensor offset.
